# metacode_study

./: .gitignore  PLAN.md  README.md  stateful_agent_tutorial.ipynb
eddr/: AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  TODO.md  TODO_ARCHIVE.md  pyproject.toml
eddr/docs/: 01_eda_findings.md  FOUNDATION_DB_USAGE.md  GOLDEN_QUERY_CANDIDATES.md  PLAN.md  SECOND_BRAIN_DESIGN.md  SOLUTION_REVIEW.md  golden_set.yaml  prd.md  scenario.md
eddr/docs/adr/: 0001-privacy-boundary.md  0002-photo-identity.md  0003-llm-tool-surface.md  0004-eda-driven-scope-decisions.md  0005-google-takeout-source.md  0006-vector-store-selection.md  0007-lan-distributed-vision.md  0008-web-server-contracts.md  0009-map-local-search.md
eddr/docs/critics/: 2026-06-14_third-party-ux-eval.md
eddr/docs/postmortem/: 2026-06-14-caption-recaption.md  2026-06-14-naengmyeon-food-caption-quality.md
eddr/docs/rag_quality/: questions.yaml
eddr/notebooks/: 01_eda.ipynb  02_full_dataset_eda.ipynb  03_vision_caption_eda.ipynb  04_day_geocaption_eda.ipynb  05_index_verification.ipynb
eddr/notebooks/.ipynb_checkpoints/: 01_eda-checkpoint.ipynb  02_full_dataset_eda-checkpoint.ipynb
eddr/reports/caption_audit/: 20260613_bean_sprouts.json  20260613_food_strand_candidate_set.md  20260613_food_strand_labels.json  20260613_mung_bean_sprouts.json  20260613_naengmyeon.json  20260613_naengmyeon_labeled.json  20260613_noodles.json  20260613_prompt_ab_eval_food_guard.json  20260613_prompt_ab_gemma_food_guard.jsonl  20260613_prompt_ab_qwen_food_guard.jsonl  20260613_prompt_ab_qwen_food_guard_16jpg.jsonl  20260613_quality_C0C1_gemma_e2b.jsonl  20260613_quality_C2_qwen8b.jsonl  20260613_quality_C2b_qwen8b_p5.jsonl  20260613_quality_C3_gemma31b.jsonl  20260613_quality_C3b_gemma31b_p5.jsonl  20260613_quality_eval_set.json  20260613_quality_grading_input.json  20260613_quality_p5_compare.json  20260613_quality_report.md  20260613_quality_scores.json  20260613_ramen.json  20260613_recaption_foodset.json  20260613_recaption_foodset_remaining.json  20260614_prompt_ab_eval_qwen_food_guard_7partial.json
eddr/reports/extract/: 20260612_0917_extract_bench.md  20260612_0955_extract_bench.md
eddr/reports/golden/: 20260611_0904_ollama_qwen3.6-27b.jsonl  20260611_0904_ollama_qwen3.6-27b.md  20260611_0945_ollama_qwen3.6-27b-nothink.jsonl  20260611_0945_ollama_qwen3.6-27b-nothink.md  20260611_1150_ollama_qwen3.6-27b-nothink.jsonl  20260611_1150_ollama_qwen3.6-27b-nothink.md  20260611_1233_ollama_qwen3.6-27b-nothink.jsonl  20260611_1233_ollama_qwen3.6-27b-nothink.md  20260612_1531_v2_search.md  20260615_1651_v2_search.md
eddr/reports/rag_quality/: ASSIGNMENT_REPORT.md
eddr/reports/retrieval/: RESULTS.md  RETRIEVAL_REPORT.md  experiments.jsonl
eddr/scripts/: bench_extract.py  bench_retrieval.py  build_rag_quality_report.py
eddr/src/eddr/: __init__.py  cli.py  constants.py  types.py
eddr/tests/: conftest.py  test_smoke.py
eddr/tests/cli/: test_caption_audit_cli.py  test_cli.py  test_golden_cli.py
eddr/tests/daily_radius/: test_cluster.py  test_wizard.py
eddr/tests/db/: test_repository.py  test_source_loader.py
eddr/tests/dedup/: test_hashes.py  test_pipeline.py
eddr/tests/eval/: test_bench_retrieval_gt.py  test_rag_quality.py
eddr/tests/geocode/: test_nominatim.py  test_pipeline.py
eddr/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
eddr/wiki/: WIKI_INDEX.md
(+194 files in other folders)
